# jeudumoulin-data

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  coverage.xml  docker-compose.yml  pyproject.toml  test_dqn_agent.py  test_dqn_models.py  test_dqn_trainer.py  test_e2e_dqn.py  test_mps_agent.py  test_replay_buffer.py  test_reward_calculator.py  test_to_indices.py
.github/actions/release_state/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build-and-push.yml  main.yml  pull_request.yml  quality.yml  rust_quality.yml  tests_and_type_check.yml  validate.yml
config/: play.yaml  train_alphazero.yaml  train_alphazero_from_pretrained.yaml  train_alphazero_light.yaml  train_dqn.yaml  train_dqn_from_pretrained.yaml
src_python/: settings.py
src_python/agent/: __init__.py
src_python/agent/alphazero/: __init__.py  _agent.py  _backbone.py  _base.py  _conditional_policy.py  _models.py  _position.py  _replay_buffer.py  (+2 more)
src_python/cli/: __init__.py  main.py  play.py  utils.py
src_python/jdm_ru/: __init__.py  __init__.pyi
src_python/monitoring/: __init__.py  _cloudflare_acess.py  _mlflow.py
src_python/player/: __init__.py  _alphazero.py  _base.py  _config.py  _dqn.py  _human.py  _random.py
src_python/reward/: __init__.py  calculator.py
src_python/workflows/: __init__.py  _deployment.py  _flows.py  _tasks.py
src_rust/: lib.rs
src_rust/agent/: base.rs
src_rust/game/: board.rs  constants.rs  mod.rs
src_rust/search/: mcts.rs  mod.rs
src_rust/training/: mod.rs  self_play.rs
(+18 files in other folders)
