[package]
name = "jdm-ru"
version = "0.0.1"
edition = "2021"
authors = ["Yann HALLOUARD <yann.hal@gmail.com>"]
description = "Rust implementation of Jeu du Moulin (Nine Men's Morris) with AlphaZero agent"
license = "MIT"
readme = "README.md"

[lib]
name = "jdm_ru"
path = "src_rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.16"
indicatif = "0.17"
safetensors = "0.4"
anyhow = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
